<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/import_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:orientation="vertical">

        <com.wallet.crypto.widget.HelperTextInputLayout
            android:id="@+id/private_key_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/suggestion_private_key"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/private_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_private_key_field"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.wallet.crypto.widget.HelperTextInputLayout>


        <com.wallet.crypto.widget.HelperTextInputLayout
            android:id="@+id/pwd_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/suggestion_pwd"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_private_pwd"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.wallet.crypto.widget.HelperTextInputLayout>

        <com.wallet.crypto.widget.HelperTextInputLayout
            android:id="@+id/pwd_confirm_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/suggestion_pwd"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/pwd_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_private_pwd_confirm"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.wallet.crypto.widget.HelperTextInputLayout>

        <Button
            android:id="@+id/import_action"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/action_import" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:text="@string/suggestion_field_required" />
    </LinearLayout>
</ScrollView>